--- a/contact.html
+++ b/contact.html
@@ -29,17 +29,21 @@
             });
         });
     </script>
-<nav>
-    <ul>
-      <li><a href="/index.html">Home</a></li>
-      <li><a href="/phoenix.html">Phoenix</a></li>
-      <li><a href="/tucson.html">Tucson</a></li>
-      <li><a href="/scottsdale.html">Scottsdale</a></li>
-      <li><a href="/contact.html">Contact</a></li>
-  </ul>
-  </nav>
+        <nav>
+            <ul>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/phoenix.html">Phoenix</a></li>
+            <li><a href="/tucson.html">Tucson</a></li>
+            <li><a href="/scottsdale.html">Scottsdale</a></li>
+            <li><a href="/contact.html">Contact</a></li>
+        </ul>
+        </nav>
 
-      <div class="form-container">
+        <header>
+            <h1>Contact <img src="./images/arizona-sunset.jpeg" alt="arizona sunset" width="400px"/></h1>
+        </header>
+    
+    <section class="form-container">
         <form>
             <label for="fname">First Name</label>
             <input type="text" id="fname" name="firstname" placeholder="Your name">
@@ -58,6 +62,9 @@
 
             <input type="submit" id="submit" value="Submit">
         </form>
-      </div>
+    </section>
+    <aside>
+        We look forward to your visit!
+    </aside>
 </body>
 </html>
