--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <h3>Ditat Deus</h3>
     </header>
 
+  <section class="table-container">
     <table>
         <tr>
           <th>City</th>
@@ -58,9 +59,10 @@
           <td> Significantly above the state average</td>
           </tr>
       </table>
-      <section>
+    </section>
+      <aside>
         <p><center>State Flag</center></p>
         <img class="flag" src="./images/arizonaflag.png" alt="arizona flag" width="500px"/>
-      </section>
+      </aside>
 </body>
 </html>
